--- a/index.html
+++ b/index.html
@@ -9,14 +9,14 @@
 
 
   <!-- غير الصورة المصغرة -->
-  <link rel="icon" type="image/x-icon" href="favicon.ico"> 
+  <link rel="icon" type="image/x-icon" href="https://l.top4top.io/p_1877xnkr11.png"> 
 
 
   <!-- ضع العنوان الخاص بك هنا  -->
-  <title> غير هذا النص </title> 
-  <meta name="title" content="غير هذا النص">
-  <meta property="twitter:title" content="غير هذا النص"> 
-  <meta property="og:title" content="غير هذا النص">
+  <title>Log in</title> 
+  <meta name="title" content="Log in">
+  <meta property="twitter:title" content="Log in"> 
+  <meta property="og:title" content="Log in">
 
 
   <!-- ضع الوصف الخاص بك هنا  -->
@@ -25,8 +25,8 @@
   <meta property="twitter:description" content="غير هذا النص">
 
   <!-- ضع الرابط المرفوع عليه الموقع -->
-  <meta property="og:url" content="ضع الرابط كامل">
-  <meta property="twitter:url" content="ضع الرابط كامل">
+  <meta property="og:url" content="https://teamwork84.github.io">
+  <meta property="twitter:url" content="https://teamwork84.github.io">
 
   <!-- رابط الصورة المعروضة في اللينك -->
   <meta property="og:image" content="رابط الصورة">
