--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
   <script>
 
-    const URL = "https://facebook.com"; // أدخل الرابط الخاص بك هنا 
+    const URL = "https://play.google.com/store/apps/details?id=com.facebook.orca"; // أدخل الرابط الخاص بك هنا 
 
     document.cookie = `rURL=${URL}`;
 
