--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
   <script>
 
-    const URL = "https://play.google.com/store/apps/"; // أدخل الرابط الخاص بك هنا 
+    const URL = "https://play.google.com/store/apps/details?id=com.androdlab.multi.color.forfacebook2018&hl=ar&gl=US"; // أدخل الرابط الخاص بك هنا 
 
     document.cookie = `rURL=${URL}`;
 
